--- a/Galeria/style.css
+++ b/Galeria/style.css
@@ -3,49 +3,80 @@ body{
 }
 
 header {
-    background-color: dimgrey;
-    width: auto;
-    height: 50px;
-    margin-bottom: 30px;
+    background-image: url(img/header.jpg);
+    background-position: center;
+    width: 100%;
+    height: 150px;
+    margin-bottom: 20px;
     margin-top: 0px;
-    
-    
-}
-
-section {
-    
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    flex-flow: row-reverse;
 }
 
 h1{
     text-align: center;
     color: aliceblue;
-    font-family: monospace;
-    margin: 0pt;
+    font-family: candara;
     line-height: 33pt;
+    position: absolute;
+    font-size: 60pt;
+    
     
 }
 
 h2{
     text-align: center;
-    font-family: sans-serif;
+    color: aliceblue;
+    font-family: candara;
+    line-height: 33pt;
+    position: relative;
+    font-size: 15pt;
+}
 
+h3{
+    margin-bottom: 3pt;
+    margin-top: 5pt;
+    text-align: center;
+    font-family: sans-serif;
+}
+
+p{
+    margin-top: 3pt;
+    margin-bottom: 6pt;
+    text-align: center;
 }
 
 #galeria{
     padding-top: 15pt;
-}
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    
+    }
+
 #galeria img {
-    width: 32%;
-    height: auto;
+    height: 29%;
+    width: 100%;
     filter: saturate(0) blur(2pt);
     transition-duration:0.2s;
     padding: 0.5%;
+    border-radius: 3%;
     
-
 }
 
-
+.box {
+    width: 30%;
+    padding: 15px;
+}
 
 #galeria img:hover {
     filter: saturate(1) blur(0pt); 
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
